images for section 6

--- a/index.html
+++ b/index.html
@@ -1808,7 +1808,7 @@
                         <p class="title">Microsoft Store badge usage</p>
                     </div>
 
-                    <div class="row">
+                    <div class="row v-center">
                         <div class="fourths">
                             <img src="assets/store-badge-1.png" alt="Microsoft Store badge at bottom of image">
                         </div>
@@ -3097,7 +3097,13 @@
                     <div class="row">
                         <h4>Use these templates when designing standard banners </h4>
                     </div>
+                    <div class="row"><img src="assets/halo-image-array.png" alt="array of image size for halo"></div>
 
+                    <!-- spacing -->
+                    <div class="row" role="presentation"></div>
+                    <div class="row" role="presentation"></div>
+
+                    <div class="row"><img src="assets/halo-image-array-dark.png" alt="image array of halo on dark background"></div>
                 </div>
             </section>
             <section id="section-6-3">
@@ -3108,6 +3114,81 @@
                     </div>
                     <div class="row">
                        <h5>Social media is the space where we build intimate connections with our audiences. Don't just promote products, empower your audiences with the experiences they want. </h5>
+                    </div>
+
+                    <div class="row-seven">
+                        <div class="half">
+                            <p class="title">Avoid overbranding with Microsoft logo</p>
+                        </div>
+                        <div class="half"> 
+                            <p class="title">Avoid placing logos in images</p>
+                        </div>
+                    </div>
+                    <div class="row-seven">
+                        <div class="half">
+                            <img src="assets/ms-store-overbrand.png" alt="avoid overbranding Microsoft logo">
+                        </div>
+                        <div class="half">
+                            <img src="assets/logo-in-image.png" alt="example of logo in image">
+                        </div>
+                    </div>
+                    <div class="row">
+                            <p class="title">Examples of templates for promoting digital products</p>
+                        </div>
+                    <div class="row-twelve">
+                        <div class="thirds">
+                            <img src="assets/social-image-array-1.png" alt="Star wars option 2">
+                        </div>
+                        <div class="thirds">
+                            <img src="assets/social-image-array-2.png" alt="Star Wars option 2">
+                        </div>
+                        <div class="thirds">
+                            <img src="assets/social-image-array-3.png" alt="Star Wars option 3">
+                        </div>
+                    </div>
+                    <div class="row-twelve">
+                        <div class="thirds">
+                            <img src="assets/social-image-array-4.png" alt="Gears of War option 1">
+                        </div>
+                        <div class="thirds">
+                            <img src="assets/social-image-array-5.png" alt="Gears of War option 2">
+                        </div>
+                        <div class="thirds">
+                            <img src="assets/social-image-array-6.png" alt="Gears of War option 3">
+                        </div>
+                    </div>
+                    <div class="row-twelve">
+                        <div class="thirds">
+                            <img src="assets/social-image-array-7.png" alt="Duolingo option 1">
+                        </div>
+                        <div class="thirds">
+                            <img src="assets/social-image-array-8.png" alt="Duolingo option 2">
+                        </div>
+                        <div class="thirds">
+                            <img src="assets/social-image-array-9.png" alt="Duolingo option 3">
+                        </div>
+                    </div>
+                    <div class="row-twelve">
+                        <div class="thirds">
+                            <img src="assets/social-image-array-10.png" alt="apps option 1">
+                        </div>
+                        <div class="thirds">
+                            <img src="assets/social-image-array-11.png" alt="apps option 2">
+                        </div>
+                        <div class="thirds">
+                            <img src="assets/social-image-array-12.png" alt="apps option 3">
+                        </div>
+                    </div>
+                    <div class="row-twelve">
+                        <div class="thirds">
+                            <img src="assets/social-image-array-13.png" alt="movies option 1">
+                        </div>
+                        <div class="thirds">
+                            <img src="assets/social-image-array-14.png" alt="movies option 2">
+                        </div>
+                        <div class="thirds">
+                            <img src="assets/social-image-array-15.png" alt="movies option 3">
+                        </div>
                     </div>
                 </div>
             </section>
