section 1 small desktop

--- a/index.html
+++ b/index.html
@@ -240,8 +240,7 @@
                                 <h6>3</h6>
                             </span>
                             <h6>Storytelling framework</h6>
-                            <p>The Microsoft Store storytelling framework dives deep into what empowerment means, and how to
-                                deliver it
+                            <p>The Microsoft Store storytelling framework dives deep into what empowerment means, and how to deliver it
                             </p>
                         </div>
                         <div class="half">
@@ -249,16 +248,14 @@
                                 <h6>4</h6>
                             </span>
                             <h6>Editorial approach</h6>
-                            <p>Like a magazine, Microsoft Store should be about curating content and providing warm and relaxed
-                                experiences that have customers coming back for more.</p>
+                            <p>Like a magazine, Microsoft Store should be about curating content and providing warm and relaxed experiences that have customers coming back for more.</p>
                         </div>
                         <div class="half">
                             <span class="numeral">
                                 <h6>5</h6>
                             </span>
                             <h6>More to come</h6>
-                            <p>We're just beginning the evolution of Microsoft Store. While these guidelines are high-level,
-                                look for regular updates that cover various elements in greater depth.</p>
+                            <p>We're just beginning the evolution of Microsoft Store. While these guidelines are high-level, look for regular updates that cover various elements in greater depth.</p>
                         </div>
                     </div>
                 </div>
