styling section 2 desktop

--- a/index.html
+++ b/index.html
@@ -362,10 +362,7 @@
                         <h4>We strive to reach people who share a mindset&mdash;people of action</h4>
                     </div>
                     <div class="row">
-                        <h5 class="heavy">They're not ones to leave a good idea alone. They have the ambition to turn ideas into actions, accomplish
-                            more, or change their lives (or the world). They wear many hats, play many roles. They're the
-                            doers&mdash;the people who start things, big and small. Move the world forward. And inspire others
-                            to do the same. </h5>
+                        <h5 class="heavy">They're not ones to leave a good idea alone. They have the ambition to turn ideas into actions, accomplish more, or change their lives (or the world). They wear many hats, play many roles. They're the doers&mdash;the people who start things, big and small. Move the world forward. And inspire others to do the same. </h5>
                     </div>
                     <div class="overlay">
                         <div class="img-wrapper">
@@ -374,11 +371,8 @@
                             </picture>
                         </div>
                         <div class="right">
-                            <p>For Kenesha Sneed, starting Tactile Matter, a business creating ceramics, was about finding the
-                                balance between heart and head. </p>
-                            <p>She needed to prove to herself that she could do it. That she could beat the odds, and do so
-                                in a way that maintained her integrity as an artist. A balance and a struggle we are all
-                                familiar with.</p>
+                            <p>For Kenesha Sneed, starting Tactile Matter, a business creating ceramics, was about finding the balance between heart and head. </p>
+                            <p>She needed to prove to herself that she could do it. That she could beat the odds, and do so in a way that maintained her integrity as an artist. A balance and a struggle we are all familiar with.</p>
                         </div>
                     </div>
                 </div>
@@ -390,13 +384,10 @@
                         <h4>We want to win the hearts and minds of Gamers, Creators, Learners, and Businesses</h4>
                     </div>
                     <div class="row">
-                        <h5>To empower everyone, you need to start small and grow from there. Gamers, Creators, Learners, Businesses,
-                            and among them— female and Hispanic customers— are the groups of people of action we are looking
-                            to attract.</h5>
+                        <h5>To empower everyone, you need to start small and grow from there. Gamers, Creators, Learners, Businesses, and among them— female and Hispanic customers— are the groups of people of action we are looking to attract.</h5>
                     </div>
                     <div class="row">
-                        <h5> Diverse and different, they are passionate, influential, millennially-minded and are open to new
-                            experiences. They are looking for new stories, new communities, and new things they can achieve.</h5>
+                        <h5> Diverse and different, they are passionate, influential, millennially-minded and are open to new experiences. They are looking for new stories, new communities, and new things they can achieve.</h5>
                     </div>
                     <div class="row"></div>
                     <div class="row-twelve">
@@ -417,28 +408,17 @@
                     </div>
                     <div class="row-twelve">
                         <div class="fourths">
-                            <p>They love games. They play, stream, engage. They know game creators by heart, tattoo favorite
-                                characters on their ankles, cosplay at gaming conferences, and simply love everything gaming.
+                            <p>They love games. They play, stream, engage. They know game creators by heart, tattoo favorite characters on their ankles, cosplay at gaming conferences, and simply love everything gaming.
                                 </p>
                         </div>
                         <div class="fourths">
-                            <p>Obsessed with making things— from writing blogs to creating new technology and things. They follow
-                                great designers, artists, and role models and are not afraid to post a nice-looking selfie,
-                                curate a trendy Instagram feed, or be obsessed about doughnuts. Because why not be obsessed
-                                with them? Doughnuts are totally awesome. </p>
+                            <p>Obsessed with making things— from writing blogs to creating new technology and things. They follow great designers, artists, and role models and are not afraid to post a nice-looking selfie, curate a trendy Instagram feed, or be obsessed about doughnuts. Because why not be obsessed with them? Doughnuts are totally awesome. </p>
                         </div>
                         <div class="fourths">
-                            <p>From young to old—they are in a mindset of learning new things. At times curious, at times procrastinating,
-                                they might miss a class or two (because partying is also living), but they ultimately want
-                                to do something meaningful, learn new things, evolve themselves, and follow their hearts.
-                                Teachers and students, learners and educators—they are on the lookout for new ideas, new
-                                concepts, and new things.</p>
+                            <p>From young to old—they are in a mindset of learning new things. At times curious, at times procrastinating, they might miss a class or two (because partying is also living), but they ultimately want to do something meaningful, learn new things, evolve themselves, and follow their hearts. Teachers and students, learners and educators—they are on the lookout for new ideas, new concepts, and new things.</p>
                         </div>
                         <div class="fourths">
-                            <p>The name says it all. Driven by a desire to create and grow business. On the lookout for new
-                                ideas, methods, and opportunities. Not afraid of experiments and failures. These are the
-                                people who create electric cars in their garages, disrupt banking with new apps, test out
-                                rockets in the open fields, and simply dream of creating the next best thing.</p>
+                            <p>The name says it all. Driven by a desire to create and grow business. On the lookout for new ideas, methods, and opportunities. Not afraid of experiments and failures. These are the people who create electric cars in their garages, disrupt banking with new apps, test out rockets in the open fields, and simply dream of creating the next best thing.</p>
                         </div>
                     </div>
                 </div>
@@ -453,7 +433,7 @@
                         <h5 class="heavy">Our story is what guides the experiences we create</h5>
                     </div>
                     <article class="row">
-                        <p>Buying technology today often seems to be just about the technology itself, a purely aesthetic representation of the product, not really about what it's used for. While this may drive the initial sale, we believe that technology ultimately exists to help people with what they’re up against and to empower them to achieve more.</p>
+                        <p>Buying technology today often seems to be just about the technology itself, a purely aesthetic representation of the product  not really about what it's used for. While this may drive the initial sale, we believe that technology ultimately exists to help people with what they’re up against and to empower them to achieve more.</p>
                         <p>Our job at Microsoft Store is to remove barriers between people, their ideas, and ways to pursue them. It’s not just presenting great products—it's showing how to use them. It’s highlighting the creators of these products, sharing their stories, and inviting customers to co-create with us. Ultimately, it’s bringing people together and in that moment helping them achieve the new, the possible, and the impossible. </p>
                         <p>That's what we do in Microsoft Store.</p>
                     </article>
