no margin, no padding classes

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                         <h4>We want to win the hearts and minds of Gamers, Creators, Learners, and Businesses</h4>
                     </div>
                     <div class="row">
-                        <h5>To empower everyone, you need to start small and grow from there. Gamers, Creators, Learners, Businesses, and among them— female and Hispanic customers— are the groups of people of action we are looking to attract.</h5>
+                        <h5 class="no-margin">To empower everyone, you need to start small and grow from there. Gamers, Creators, Learners, Businesses, and among them— female and Hispanic customers— are the groups of people of action we are looking to attract.</h5>
                     </div>
                     <div class="row">
                         <h5> Diverse and different, they are passionate, influential, millennially-minded and are open to new experiences. They are looking for new stories, new communities, and new things they can achieve.</h5>
@@ -801,7 +801,7 @@
                             our copy as much as visual experiences.</h4>
                     </div>
                     <div class="row">
-                        <h5 class="heavy">To empower everyone, you need to start small and grow from there. Gamers, Creators, Learners, Businesses,
+                        <h5 class="heavy no-margin">To empower everyone, you need to start small and grow from there. Gamers, Creators, Learners, Businesses,
                             and among them— female and Hispanic customers— are the groups of people of action we are looking
                             to attract. </h5>
                     </div>
