--- a/index.html
+++ b/index.html
@@ -757,11 +757,11 @@
                         <h4>Introducing editorial system</h4>
                     </div>
                     <div class="row">
-                        <h5 class="heavy">Traditionally retail has predominantly been a product medium. It was rather scripted and mechanical.
+                        <h5 class="heavy no-margin">Traditionally retail has predominantly been a product medium. It was rather scripted and mechanical.
                             It was all about distribution, and a deal.</h5>
                     </div>
                     <div class="row">
-                        <h5 class="heavy"> Our approach is much more subtle. It's much more sensual. It's about how products feel, and what
+                        <h5 class="heavy no-margin"> Our approach is much more subtle. It's much more sensual. It's about how products feel, and what
                             they enable. As much as how they look. We want to imbue people with a sense of well-being, empowerment,
                             and a sort of gentle joyfulness. It's about how we experience the products and what we accomplish
                             with them.</h5>
