--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@
                     <div class="row" role="presentation"></div>
                     <div class="row" role="presentation"></div>
 
-                    <div class="row">
+                    <div class="row magazine">
                         <div class="mag">
                             <h2 class="light">Treat it like a magazine</h2>
                             <div class="thirds">
@@ -932,7 +932,7 @@
                         <h4>Introducing editors</h4>
                     </div>
                     <div class="row">
-                        <h5 class="heavy">Editors polish and refine, they direct the focus of the story along a particular course. They cut
+                        <h5 class="heavy no-margin">Editors polish and refine, they direct the focus of the story along a particular course. They cut
                             out what doesn't fit, what is nonessential to the purpose of the story. They enhance the major
                             points, draw attention to places where the audience should focus.</h5>
                     </div>
