--- a/index.html
+++ b/index.html
@@ -501,9 +501,11 @@
                             <div class="desc">Remove Bariers</div>
                             <p>
                                 Go behind the scenes - invite others to co-create - Provide an outlet for new thinking
-                                <a
-                                    href="#" class="drawer">More</a>
+                                <a href="#first-out" class="drawer">More</a>
                             </p>
+                            <div id="first-out" class="drawer-content">
+                                    <p> We empower by removing the barriers between products and people. First, we go behind the scenes and show who made these products and how, and tell stories of their inspiration and passion that our customers can learn from. Second, we open up about our own work—inviting people to co-create products and experiences with us. From campaigns to evergreen design work, we partner with others. And when we do, we create stories about it that others can learn something practical and inspiring from. Finally, we invite great thinkers to share their own ideas and insights. In bite-sized, snackable format (our attention span is virtually nonexistent these days)—so that we can remove the biases and barriers to empowerment.</p>
+                            </div>
 
                         </div>
                         <div class="thirds">
@@ -514,16 +516,21 @@
                             <p>
                                 Go beyond imagination - Share tips and tricks - Host happenings that you'd skip Friday night for
                                 <a
-                                    href="#" class="drawer">More</a>
+                                    href="#second-out" class="drawer">More</a>
                             </p>
-
+                            <div class="drawer-content" id="second-out">
+                                <p> Our audiences are tired of role models. What they want is not just inspiration and motivation—but knowing the skills and tools that help them achieve the things others have already accomplished. How to build a game? How to shoot a movie? What can I learn from those who have done it before? These questions are what our audiences deeply care about. Empowering is giving them what they care about in an engaging format—with tips, tricks, tutorials, and workshops worthy of spending Friday night or a weekend at.</p>
+                            </div>
                         </div>
                         <div class="thirds">
                             <div class="title">Step 3. Community</div>
                             <div class="desc">Create communities</div>
                             <p>Partner with people and brands – Nurture a sense of belonging – Craft shared experiences
-                                <a href="#" class="drawer">More</a>
+                                <a href="#third-out" class="drawer">More</a>
                             </p>
+                            <div class="drawer-content" id="third-out">
+                                <p>Inviting trendy artists, fascinating people, brands, and local communities to work and co-create with us ultimately empowers others to create the things they want, not what we think is right for them. We are looking to create experiences that people can develop a sense of belonging to. Platforms where others can communicate with each other, exchange ideas, and achieve whatever they are after. Be it a game tournament, a hackathon, or a photo competition, the true magic of empowerment happens when people come together.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="cta">
