--- a/index.html
+++ b/index.html
@@ -392,32 +392,19 @@
                     <div class="row"></div>
                     <div class="row-twelve">
                         <div class="fourths">
-                            <h6 class="small">Gamers</p>
+                            <h6 class="small">Gamers</h6>
+                                <p>They love games. They play, stream, engage. They know game creators by heart, tattoo favorite characters on their ankles, cosplay at gaming conferences, and simply love everything gaming. </p>
                         </div>
                         <div class="fourths">
                             <h6 class="small">Creators</h6>
-                        </div>
-                        <div class="fourths">
-                            <h6 class="small">Learners</h6>
-
-                        </div>
-                        <div class="fourths">
-                            <h6 class="small">Business</h6>
-
-                        </div>
-                    </div>
-                    <div class="row-twelve">
-                        <div class="fourths">
-                            <p>They love games. They play, stream, engage. They know game creators by heart, tattoo favorite characters on their ankles, cosplay at gaming conferences, and simply love everything gaming.
-                                </p>
-                        </div>
-                        <div class="fourths">
                             <p>Obsessed with making things— from writing blogs to creating new technology and things. They follow great designers, artists, and role models and are not afraid to post a nice-looking selfie, curate a trendy Instagram feed, or be obsessed about doughnuts. Because why not be obsessed with them? Doughnuts are totally awesome. </p>
                         </div>
                         <div class="fourths">
+                            <h6 class="small">Learners</h6>
                             <p>From young to old—they are in a mindset of learning new things. At times curious, at times procrastinating, they might miss a class or two (because partying is also living), but they ultimately want to do something meaningful, learn new things, evolve themselves, and follow their hearts. Teachers and students, learners and educators—they are on the lookout for new ideas, new concepts, and new things.</p>
                         </div>
                         <div class="fourths">
+                            <h6 class="small">Business</h6>
                             <p>The name says it all. Driven by a desire to create and grow business. On the lookout for new ideas, methods, and opportunities. Not afraid of experiments and failures. These are the people who create electric cars in their garages, disrupt banking with new apps, test out rockets in the open fields, and simply dream of creating the next best thing.</p>
                         </div>
                     </div>
