--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                     <span class="badge blue">Our Method</span>
                     <div class="row">
                         <h4>Our approach has 2 components:
-                            <br>a story, and a method whcih we use to deliver that story</h4>
+                            <br>a story, and a method which we use to deliver that story</h4>
                     </div>
                     <div class="row">
                         <h6 class="tall">Use these 3 steps to create empowering experiences for your audiences.</h6>
@@ -670,7 +670,7 @@
                         <h4>One Microsoft Store, many experiences</h4>
                     </div>
                     <div class="row">
-                        <h5 class="heavy">Microsoft Store is the channel through which our customers experience, interact, and build relations
+                        <h5 class="heavy no-margin">Microsoft Store is the channel through which our customers experience, interact, and build relations
                             with Microsoft. It's where we empower every person and organization on the planet to achieve
                             more.</h5>
                     </div>
@@ -832,7 +832,7 @@
                         </div>
                     </div>
 
-                    <div class="row-lined dark">
+                    <div class="row">
                         <div class="dos">
                             <p class="title">Do this</p>
                         </div>
@@ -940,7 +940,7 @@
                         <h5 class="heavy">We use the editorial approach to build close relationships with our audiences. Follow this in your
                             practice—whether you're writing copy, creating a new experience, or launching a product. </h5>
                     </div>
-                    <div class="row-lined">
+                    <div class="row">
                         <div class="thirds">
                         </div>
                         <div class="thirds">
