--- a/index.html
+++ b/index.html
@@ -490,6 +490,7 @@
                             <div class="desc">Remove Barriers</div>
                             <p>Go behind the scenes - invite others to co-create - Provide an outlet for new thinking<a href="#first-out" class="drawer">More</a></p>
                             <div id="first-out" class="drawer-content">
+                                <button class="drawer-close">Close</button>
                                 <p> We empower by removing the barriers between products and people. First, we go behind the scenes and show who made these products and how, and tell stories of their inspiration and passion that our customers can learn from. Second, we open up about our own work—inviting people to co-create products and experiences with us. From campaigns to evergreen design work, we partner with others. And when we do, we create stories about it that others can learn something practical and inspiring from. Finally, we invite great thinkers to share their own ideas and insights. In bite-sized, snackable format (our attention span is virtually nonexistent these days)—so that we can remove the biases and barriers to empowerment.</p>
                             </div>
                         </div>
@@ -498,6 +499,7 @@
                             <div class="desc">Enhance skills</div>
                             <p>Go beyond imagination - Share tips and tricks - Host happenings that you'd skip Friday night for<a href="#second-out" class="drawer">More</a></p>
                             <div class="drawer-content" id="second-out">
+                                    <button class="drawer-close">Close</button>
                                 <p> Our audiences are tired of role models. What they want is not just inspiration and motivation—but knowing the skills and tools that help them achieve the things others have already accomplished. How to build a game? How to shoot a movie? What can I learn from those who have done it before? These questions are what our audiences deeply care about. Empowering is giving them what they care about in an engaging format—with tips, tricks, tutorials, and workshops worthy of spending Friday night or a weekend at.</p>
                             </div>
                         </div>
@@ -506,6 +508,7 @@
                             <div class="desc">Create communities</div>
                             <p>Partner with people and brands – Nurture a sense of belonging – Craft shared experiences<a href="#third-out" class="drawer">More</a></p>
                             <div class="drawer-content" id="third-out">
+                                    <button class="drawer-close">Close</button>
                                 <p>Inviting trendy artists, fascinating people, brands, and local communities to work and co-create with us ultimately empowers others to create the things they want, not what we think is right for them. We are looking to create experiences that people can develop a sense of belonging to. Platforms where others can communicate with each other, exchange ideas, and achieve whatever they are after. Be it a game tournament, a hackathon, or a photo competition, the true magic of empowerment happens when people come together.</p>
                             </div>
                         </div>
@@ -1617,8 +1620,8 @@
                     <div class="row-seven">
                         <div class="half">
                             <p class="title">Do not use the icon as a representation of Microsoft Store.</p>
-                            <div><img src="assets/no-icon-as-store.png" alt="Don's use the icon as a Microsoft Store representation"></div>
-                            <div><img src="assets/use-ms-as-text.png" alt="use Microsoft Store as text"></div>
+                            <img src="assets/no-icon-as-store.png" alt="Don's use the icon as a Microsoft Store representation">
+                            <img src="assets/use-ms-as-text.png" alt="use Microsoft Store as text">
                             <p>Instead use “Microsoft Store” in text</p>
                         </div>
                         <div class="half">
