easing the scroll

--- a/index.html
+++ b/index.html
@@ -3121,6 +3121,7 @@
 
         <!-- JavaScript additions -->
         <!-- ... -->
+        <script src="assets/scripts/animatescroll.js"></script>
 </body>
 
 </html>
