styling nav toggle

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                     <h5 class="heavy">
                         Our message is what we tell our customers to win their hearts and minds
                     </h5>
-                    <div class="row">
+                    <div class="row cs">
                         <div class="three_cs">
                             <p>Content</p>
 
@@ -459,7 +459,7 @@
                         </div>
                     </div>
 
-                    <div class="row">
+                    <div class="row cs">
                         <div class="three_cs">
                             <p>Confidence</p>
                         </div>
@@ -468,7 +468,7 @@
                         </div>
                     </div>
 
-                    <div class="row">
+                    <div class="row cs">
                         <div class="three_cs">
                             <p>Community</p>
                         </div>
