resizing images and tablet

--- a/index.html
+++ b/index.html
@@ -1133,7 +1133,7 @@
                     <div class="row">
                         <h2 class="super tall">Microsoft Store</h2>
                     </div>
-                    <div class="row">
+                    <div class="row collapse">
                         <div class="thirds">
                             <h5 class="heavy">Not our name</h5>
                             <div class="donts">
